# fluvio-jolt

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SPEC.md  bors.toml  lib.rs
.github/workflows/: ci.yml  publish.yaml  publish_crate.yml  publish_dev.yaml
fluvio-jolt/: Cargo.toml
fluvio-jolt/benches/: benchmarks.rs  input.json  spec.json
fluvio-jolt/src/: error.rs  pointer.rs  remove.rs
fluvio-jolt/src/dsl/: ast.rs  chars.rs  token.rs  tokenizer.rs
fluvio-jolt/tests/: mod.rs
fluvio-jolt/tests/data/: remove.json  shift_wildcards.json  simple_wildcards.json
fluvio-jolt/tests/data/shift/: rss.json
fluvio-jolt/tests/java/: cardinality.rs  mod.rs  util.rs
fluvio-jolt/tests/java/resources/shift/: arrayExample.json  firstSample.json  lhsAmpMatch.json  mergeParallelArrays3_and-filter.json  transposeComplex2.json  wildcardSelfAndRef.json  wildcards.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
smartmodule/: Cargo.toml  README.md  SmartModule.toml
smartmodule/.hub/: jolt-0.3.0.ipkg  package-meta.yaml
smartmodule/hub/: package-meta.yaml
smartmodule/src/: lib.rs
src/: default.rs  error.rs  expr.rs  fn_call.rs  grammar.lalrpop  lib.rs  pointer.rs  remove.rs  shift.rs  spec.rs  transform.rs
src/dsl/: ast.rs  deserialize.rs  error.rs  mod.rs  parser.rs  test.rs  token.rs  tokenizer.rs
src/expr/: ast.rs  parser.rs
tests/: mod.rs
tests/data/: from_benchmark.json  nested_variables.json  shift_and_default.json  shift_wildcards.json  shift_with_or_condition.json  simple.json  simple_wildcards.json  variables.json
tests/data/shift/: array.json  rss.json
tests/java/: cardinality.rs  default.rs  mod.rs  remove.rs  shift.rs  sort.rs  util.rs
tests/java/resources/: README.md
tests/java/resources/shift/: filterParallelArrays.json  filterParents3.json  inputArrayToPrefix.json  invertMap.json  json-ld-escaping.json  mergeParallelArrays2_and-do-not-transpose.json  passThru.json  queryMappingXform.json  simpleLHSEscape.json  simpleRHSEscape.json  transposeArrayContents1.json  transposeArrayContents2.json  transposeComplex1.json  transposeComplex4_lhs-multipart-rhs-sugar.json  transposeComplex9_lookup_an_array_index.json  transposeInverseMap1.json  transposeLHS1.json  transposeLHS2.json  transposeLHS3.json  transposeSimple1.json  transposeSimple2.json  transposeSimple3.json
