[package]
name = "fluvio-jolt"
version = "0.1.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio JSON to JSON transformation library"
repository = "https://github.com/infinyon/fluvio-jolt"
license = "Apache-2.0"
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
